languages/io-automaton-fe/src/test/resources/invalid/NameConflictVariableAndIO.ioautomaton
package invalid;

automaton NameConflictVariableAndIO{
    
    input int a;
    variable int a;
    
    variable double b;
    output double b;
    
    // declaration of c is okay, no error
    input int c;
    output int c;
    
    // multiple declarations of d
    input int d;
    input int d;
    
    // multiple declarations of e 
    output int e;
    output int e; 
    
    variable int f;
    variable int f;

    state A;
    initial A;

}